# pnfl-scheduler

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  TODO.md  pyproject.toml  pyrightconfig.json  season-report.txt  season.html
config/: generate-schedule.dev.ini  generate-schedule.ini
data/: README.md  nonconf_history.json  nonconf_history_2042.json  nonconf_history_2043.json  nonconf_history_2044.json  nonconf_history_2045.json  nonconf_history_2046.json  nonconf_history_2047.json
scripts/: count_solutions.py
specs/: 2048 Schedule.txt
src/pnfl_scheduler/: __init__.py  __main__.py  cli.py  config.py  history.py  html_writer.py  main.py  report.py  run.py  scheduler.py  scheduler_history.py  scheduler_two_phase.py  teams.py  txt_schedule_writer.py  writer.py
src/pnfl_scheduler/app/: cli.py  config.py  run.py
src/pnfl_scheduler/domain/: __init__.py  history.py  league.py  schedule.py  teams.py
src/pnfl_scheduler/output/: html_writer.py  txt_schedule_writer.py  writer.py
src/pnfl_scheduler/schedulers/: README.md  __init__.py  errors.py  fixed_matchup_builder.py  fixed_matchup_scheduler.py  helpers.py  matchup_builder.py  schedule_builder.py  scheduler.py  two_phase.py  types.py
src/pnfl_scheduler/writers/: __init__.py  html_writer.py  report.py  txt_writer.py  writer.py
tests/: conftest.py  test_history_costs.py  test_history_rules.py  test_report.py  test_schedule_rules.py  test_schedule_structure.py  test_teams.py  test_two_phase_inventory.py  test_two_phase_schedule_rules.py
tests/fixtures/: nonconf_history.json
tests/unit/: test_history_costs.py  test_playoff_mandated_pairs.py  test_two_phase_inventory.py
