[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pnfl-scheduler"
version = "0.1.0"
description = "Two-phase PNFL schedule generator built on Google OR-Tools."
authors = [{ name = "Brian J" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["ortools>=9.10"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
pnfl-scheduler = "pnfl_scheduler.app.cli:main"

[project.entry-points."pnfl.commands"]
generate-schedule = "pnfl_scheduler.app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--durations=3"

[tool.ruff]
line-length = 140

[tool.ruff.format]
quote-style = "double"
