[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pnfl-scheduler"
version = "0.1.0"
description = "PNFL schedule generator built on Google OR-Tools."
authors = [{ name = "Brian J" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["ortools>=9.10"]

[project.optional-dependencies]
dev = ["pytest", "pyright==1.1.409", "ruff", "ipython"]

[project.entry-points."pnfl.commands"]
generate-schedule = "pnfl_scheduler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = ["**/*.egg-info", "**/.*", "**/.venv", "**/__pycache__", "**/build", "**/dist", "**/node_modules", "**/output", "**/venv"]
extraPaths = ["src"]
typeCheckingMode = "standard"
reportUnusedImport = "warning"
pythonVersion = "3.10"
venvPath = ".."
venv = ".venv"
